Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 17.0.0
-
None
-
-
102333d4a (master)
Description
When ld outputs errors about missing functions, the message contains location at which the functions is used, but Qt Creator picks up location in .o file and upon clicking the error, opens a binary.
/usr/lib/gcc/x86_64-pc-linux-gnu/14/../../../../x86_64-pc-linux-gnu/bin/ld: Build.dir/Target.dir/path/to/source_file.cpp.o: in function `foo()': /path/to/source_file.cpp:42:(.text+0xb58): undefined reference to `bar()' /usr/lib/gcc/x86_64-pc-linux-gnu/14/../../../../x86_64-pc-linux-gnu/bin/ld: /path/to/source_file.cpp:138:(.text+0xbc2): undefined reference to `bar()'
Rather than a link to /path/to/source_file.cpp:42, Qt Creator provides a link to Build.dir/Target.dir/path/to/source_file.cpp.o
Attachments
For Gerrit Dashboard: QTCREATORBUG-32674 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
636052,2 | ProjectExplorer: Extend LdParser | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |