ProjectExplorer: Extend LdParser

Apparently, ld error messages can contain both a line number and an
offset for the same file.

Fixes: QTCREATORBUG-32674
Change-Id: I3d5c693ba957f8bea3fa6e2f1a087242644f277c
Reviewed-by: Christian Stenger <christian.stenger@qt.io>